Bug 301340 - "Recently Used" and "Search For" should only appear if Nepomuck file indexing is enabled
Summary: "Recently Used" and "Search For" should only appear if Nepomuck file indexing...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 2.0.95
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-07 10:12 UTC by bill p. (aka google01103)
Modified: 2012-06-07 21:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bill p. (aka google01103) 2012-06-07 10:12:39 UTC
if "Recently Used" and "Search For" are not available for use then they should not be shown in places. Obviously this occurs when Nepomuk and file indexing not enabled

Reproducible: Always




Only shown if functionality available, or only in search panel
Comment 1 Peter Penz 2012-06-07 21:10:24 UTC
Git commit f5b6fbf7747cefceef4bcd31d90d053da5c560c4 by Peter Penz.
Committed on 07/06/2012 at 23:08.
Pushed by ppenz into branch 'master'.

Hide "Recently Accessed" and "Search for" if indexing is disabled

The bookmarks for "Recently Accessed" and "Search for" require
enabled indexing not only an enabled Nepomuk.
FIXED-IN: 4.9.0

M  +9    -5    dolphin/src/panels/places/placesitemmodel.cpp
M  +1    -1    dolphin/src/panels/places/placesitemmodel.h

http://commits.kde.org/kde-baseapps/f5b6fbf7747cefceef4bcd31d90d053da5c560c4