Hide "Recently Accessed" and "Search for" if indexing is disabled

The bookmarks for "Recently Accessed" and "Search for" require
enabled indexing not only an enabled Nepomuk.

BUG: 301340
FIXED-IN: 4.9.0